--- a/src/app/navigation-menu/navigation-menu.component.html
+++ b/src/app/navigation-menu/navigation-menu.component.html
@@ -1,33 +1,60 @@
-<header class="header_area" #boundary>
-        
-                <div #spacer1></div>
-                        <div stickyThing="" [spacer]="spacer1" [boundary]="boundary1">
-    <div class="container" >
-           
-        <nav class="navbar navbar-expand-lg navbar-light" >
-               
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <a class="navbar-brand logo_h" href="index.html"><img src="/assets/image/nav-logo.png" alt=""></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse offset" id="navbarSupportedContent" >
-                   
-                <ul class="nav navbar-nav menu_nav ml-auto">
-                    <li class="nav-item active"><a class="nav-link" [routerLink]="['/']">{{navMenu.home}}</a></li> 
-                    <li class="nav-item"><a class="nav-link" [routerLink]="['/login']">{{navMenu.login}}</a></li>
-                
-                </ul>
-            </div> 
-            
-        </nav>
-        
-    </div>
-                        </div>
-</header>
+<header class="app-header navbar">
+  
+    <a class="navbar-brand" href="#" >
+      <img class="navbar-brand-full" src="/assets/image/school-header-logo.svg" height="55px">
+     </a>
+ 
+   
+    <ul class="nav navbar-nav ml-auto">
+      <li class="nav-item dropdown">
+        <a class="nav-link" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="true">
+          <img class="img-avatar" src="/assets/image/blog/c1.jpg" alt="admin@bootstrapmaster.com">
+        </a>
+        <div class="dropdown-menu dropdown-menu-right">
+          <div class="dropdown-header text-center">
+            <strong>Account</strong>
+          </div>
+          <a class="dropdown-item" href="#">
+            <i class="fa fa-bell-o"></i> Updates
+            <span class="badge badge-info">42</span>
+          </a>
+          <a class="dropdown-item" href="#">
+            <i class="fa fa-envelope-o"></i> Messages
+            <span class="badge badge-success">42</span>
+          </a>
+          <a class="dropdown-item" href="#">
+            <i class="fa fa-tasks"></i> Tasks
+            <span class="badge badge-danger">42</span>
+          </a>
+          <a class="dropdown-item" href="#">
+            <i class="fa fa-comments"></i> Comments
+            <span class="badge badge-warning">42</span>
+          </a>
+          <div class="dropdown-header text-center">
+            <strong>Settings</strong>
+          </div>
+          <a class="dropdown-item" href="#">
+            <i class="fa fa-user"></i> Profile</a>
+          <a class="dropdown-item" href="#">
+            <i class="fa fa-wrench"></i> Settings</a>
+          <a class="dropdown-item" href="#">
+            <i class="fa fa-usd"></i> Payments
+            <span class="badge badge-secondary">42</span>
+          </a>
+          <a class="dropdown-item" href="#">
+            <i class="fa fa-file"></i> Projects
+            <span class="badge badge-primary">42</span>
+          </a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#">
+            <i class="fa fa-shield"></i> Lock Account</a>
+          <a class="dropdown-item" href="#">
+            <i class="fa fa-lock"></i> Logout</a>
+        </div>
+      </li>
+    </ul>
+
+  </header>
 <!--================Header Area =================-->
 
 
